Bug 485395 Never prompted for password, so auth always fails. r=Neil,sr=bienvenu